// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledFieldComponent In Error with Children 1`] = `
<body>
  <div>
    <fieldset
      class="form-group has-error"
    >
      <label
        class="control-label"
        for="ID"
      >
        Our Label
      </label>
      <div>
        <hr />
        <div
          class="help-block"
          role="alert"
        >
          errorMessage
        </div>
        
      </div>
    </fieldset>
  </div>
</body>
`;

exports[`LabeledFieldComponent add extra classNames 1`] = `
<body>
  <div>
    <fieldset
      class="a_class another_class form-group"
    >
      <label
        class="control-label"
        for="ID"
      >
        Our Label
      </label>
      <div>
        <hr />
        
        
      </div>
    </fieldset>
  </div>
</body>
`;

exports[`LabeledFieldComponent has error checked but no message so not really in error 1`] = `
<body>
  <div>
    <fieldset
      class="form-group"
    >
      <label
        class="control-label"
        for="ID"
      >
        Our Label
      </label>
      <div>
        <hr />
        
        
      </div>
    </fieldset>
  </div>
</body>
`;

exports[`LabeledFieldComponent no error 1`] = `
<body>
  <div>
    <fieldset
      class="form-group"
    >
      <label
        class="control-label"
        for="ID"
      >
        Our Label
      </label>
      <div>
        <hr />
        
        
      </div>
    </fieldset>
  </div>
</body>
`;
